@@ -36,7 +36,6 @@
 				<Option object_output="obj/Debug64/" />
 				<Option type="1" />
 				<Option compiler="mingw64" />
-				<Option parameters="-v -h smtp.sanders.org -p 2525 -f brecht@sanders.org -t brecht@edustria.be -s Test -d test -a quickmailprog.c" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
